try to fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ footer {
 
 .vertical-line {
     border-left: 2px solid #fff;
-    height: 12em;
+    height: 8em;
     margin-top: 1em;
     display: block;
     padding-left: 2em;
